--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,33 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   
   body {
-    font-size: 18px;
-    line-height: 27px;
-    background-color: #ccc;
-  }
-
-    body {
-        background-color: azure;
-    }
-
-#aboutme {
-    padding: 25px;
-    border-style: solid;
-    background-color: lightslategrey;
-    float: left;
-    height: 500px;
-    width: 700px;
+      background-color: #ccc;
+    font-family: 'Trispace', sans-serif;
+    font-size: 15px;
 }
 
-p {
-    color: ghostwhite;
-overflow-wrap: break-word;}
+#navbar {
+    margin: auto;
+    background-color: aliceblue;
+}
 
-@media
+.navbar-brand {
+    background-color: lightslategray;
+}
+
+#card {
+    margin: 10px;
+    padding: 20px;
+    border-style: groove;
+    border-color: #333;
+    background-color: lightslategrey;
+    color: gainsboro;
+}
+
+.aboutme {
+
+}
