--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@
   }
   
   body {
-      background-color: #ccc;
+    background-color: #eee;
     font-family: 'Trispace', sans-serif;
     font-size: 15px;
 }
@@ -26,7 +26,7 @@
 #card {
     padding: 20px;
     border-style: groove;
-    border-color;
+    border-color: #333;
     background-color: lightslategrey;
     color: gainsboro;
 }
@@ -43,17 +43,14 @@ hr {
     color: aliceblue;
 }
 
-.img-border{
-    border-style: groove;
-    border-color: #333;
-}
-
-#img {
-    float: left;
-    padding: 10px;
+img {
+    border: 3px solid #333;
 }
 
 img.resize {
-    max-width:300px;
-    max-height:300px;
-  }
+    max-height:231px;
+}
+
+.img-border {
+        border: 5px solid #555;
+}
