--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,11 @@ img.resize {
 }
 
 footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     text-align: center;
-    justify-content: flex-end;
-    margin-top: 15px;
     border-style: groove;
     border-color: #333;
     background-color: lightslategray;
