--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,18 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
 body {
     background-color: #eee;
     font-family: 'Trispace', sans-serif;
     font-size: 15px;
 }
 
+* {
+    box-sizing: border-box;
+  }
+  
+
 #navbar {
     background-color: aliceblue;
     margin-bottom: 15px;
+    color: #eee;
 }
 
 .navbar-brand {
@@ -28,6 +28,8 @@ body {
     border-color: #333;
     background-color: lightslategrey;
     color: gainsboro;
+    width: 800px;
+    height: 800px;
 }
 
 .aboutme {
@@ -37,6 +39,11 @@ body {
     border-color: #333;
     font-size: larger;
     margin-left: 18px;
+}
+
+#about-me-img {
+    float: left;
+    margin: 10px;
 }
 
 hr {
@@ -58,7 +65,10 @@ img {
     text-align: center;
 }
 
-#contact {
+#contact-form {
+    float: left;
+    height: 600px;
+    width: 600px;  
     padding: 20px;
     border-style: groove;
     border-color: #333;
@@ -70,6 +80,51 @@ a {
     margin: inherit;
 }
 
+label {
+    display: block;
+    margin-bottom: .5rem;
+}
+
+textarea{
+    width: 300px;
+    height: 150px;
+}
+
+input.submit{
+    margin-left: 40px;
+}
+
+.module {
+	background-color: #fff;
+	padding: 30px;
+	border: 1px solid #ddd;
+}
+
+#email-address {
+    margin-left: 40px;
+    width: .5rem;
+}
+
+#social {
+	width: 270px;
+	float: right;
+	text-align: center;
+}
+
+#social img {
+	height: 60px;
+	width: auto;
+}
+
+#social a {
+	margin-right: 8px;
+}
+
+#social a:last-child {
+	margin-right: 0;
+}
+
+
 /* css to have to footer stick to the page as you scroll up and down  */
 footer {
     position: fixed;
@@ -77,7 +132,4 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    border-style: groove;
-    border-color: #333;
-    background-color: lightslategray;
 }
