--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,10 @@ img {
     text-align: center;
 }
 
+#phone-email{
+    color: lightslategray;
+}
+
 #contact-form {
     float: left;
     height: 600px;
